--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -1,8 +1,10 @@
-<h1><%= @question.body %></h1>
+<h1><% @question.test.title %> Question</h1>
+
+<p><%= @question.body %></p>
 
 <h2>Answers</h2>
 
-<%= link_to 'New question', new_question_answer_path(@question) %>
+<%= link_to 'New answer', new_question_answer_path(@question) %>
 
 <ol>
   <%= render @question.answers %>
