--- a/app/views/test_passings/show.html.erb
+++ b/app/views/test_passings/show.html.erb
@@ -1,8 +1,11 @@
 <h1>Pass the test<%= @test_passing.test.title %></h1>
 
-<b>
+<h2>
   <%= @test_passing.current_question.body %>
-</b>
+</h2>
+
+<yu>Question: <%= current_question_on_test %> / <%= @test_passing.test.questions.size %></yu>
+
 <%= render 'shared/errors', resource: @test_passing %>
 
 <%= form_with url: test_passing_path(@test_passing), local: true, method: :put do |form| %>
