--- a/app/views/admin/tests/index.html.erb
+++ b/app/views/admin/tests/index.html.erb
@@ -1,10 +1,13 @@
 <h1>list of tests</h1>
 
+<p>
+  <%= link_to 'New test', new_admin_test_path %>
+</p>
 <table>
   <tr>
     <th>Title</th>
     <th>Number of questions</th>
-    <th>Actions</th>
+    <th colspan="4">Actions</th>
   </tr>
   <%= render @tests %>
 </table>
