--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -3,7 +3,7 @@
     <p><%= current_year %> <%= github_url('MrSaharok', 'TestGuru') %></p>
     <p>Alexandr Zheltiacov</p>
     <p>
-      <%= link_to 'Educational project in an online school Thinknetica', 'https://thinknetica.com/', target: '_blank' %>
+      <%= link_to t('general.thinknetica_link'), 'https://thinknetica.com/', target: '_blank' %>
     </p>
   </div>
 </footer>
