--- a/app/views/admin/answers/_answer.html.erb
+++ b/app/views/admin/answers/_answer.html.erb
@@ -1,6 +1,9 @@
 <li>
   <%= answer.body %><br>
-  <%= link_to 'Show', admin_answer_path(answer) %>
-  <%= link_to 'Edit', edit_admin_answer_path(answer) %>
-  <%= link_to 'Delete', admin_answer_path(answer), method: :delete, data: { confirm: 'Are you sure?' } %>
+  <%= link_to t('admin.actions.show'), admin_answer_path(answer) %>
+  <%= link_to t('admin.actions.edit'), edit_admin_answer_path(answer) %>
+  <%= link_to t('admin.actions.delete'),
+              admin_answer_path(answer),
+              method: :delete,
+              data: { confirm: t('.confirm_delete') } %>
 </li>
