--- a/app/views/admin/questions/show.html.erb
+++ b/app/views/admin/questions/show.html.erb
@@ -1,14 +1,12 @@
-<h1><% @question.test.title %> Question</h1>
-
 <p><%= @question.body %></p>
 
-<h2>Answers</h2>
+<h2>><%= t('.answers_header')%></h2>
 
-<%= link_to 'New answer', new_admin_question_answer_path(@question) %>
+<%= link_to t('.add_answer'), new_admin_question_answer_path(@question) %>
 
 <ol>
   <%= render @question.answers %>
 </ol>
 
-<%= link_to 'Edit', edit_admin_question_path(@question) %> |
-<%= link_to 'Back', admin_test_path(@question.test) %>
+<%= link_to t('admin.actions.edit'), edit_admin_question_path(@question) %> |
+<%= link_to t('general.back'), admin_test_path(@question.test) %>
