--- a/app/views/admin/tests/_form.html.erb
+++ b/app/views/admin/tests/_form.html.erb
@@ -13,5 +13,5 @@
     <%= form.collection_select :category_id, Category.all, :id, :title, prompt: true %>
   </p>
   <p><%= form.submit %></p>
-  <p><%= link_to 'Back', admin_tests_path %></p>
+  <p><%= link_to t('general.back') %></p>
 <% end %>
