--- a/app/views/admin/tests/_test.html.erb
+++ b/app/views/admin/tests/_test.html.erb
@@ -1,7 +1,11 @@
 <tr>
   <td><%= test.title %></td>
   <td><%= test.questions.count %></td>
-  <td><%= link_to 'Show', admin_test_path(test) %></td>
-  <td><%= link_to 'Edit', edit_admin_test_path(test) %></td>
-  <td><%= link_to 'Delete', admin_test_path(test), method: :delete, data: { confirm: 'Delete test?' } %></td>
+  <td><%= link_to t('admin.actions.show'), admin_test_path(test) %></td>
+  <td><%= link_to t('admin.actions.edit'), edit_admin_test_path(test) %></td>
+  <td><%= link_to t('admin.actions.delete'),
+                  admin_test_path(test),
+                  method: :delete,
+                  data: { confirm: t('.confirm_delete') } %>
+  </td>
 </tr>
