--- a/app/views/admin/tests/index.html.erb
+++ b/app/views/admin/tests/index.html.erb
@@ -1,13 +1,13 @@
-<h1>list of tests</h1>
+<h1><%= t('tests.index.test_list_header') %></h1>
 
 <p>
-  <%= link_to 'New test', new_admin_test_path %>
+  <%= link_to t('.create'), new_admin_test_path %>
 </p>
 <table>
   <tr>
-    <th>Title</th>
-    <th>Number of questions</th>
-    <th colspan="4">Actions</th>
+    <th><%= t('tests.index.title') %></th>
+    <th><%= t('tests.index.question_count') %></th>
+    <th colspan="4"><%= t('.actions') %></th>
   </tr>
   <%= render @tests %>
 </table>
