--- a/app/views/admin/tests/show.html.erb
+++ b/app/views/admin/tests/show.html.erb
@@ -1,9 +1,6 @@
 <h1><%= @test.title %></h1>
-<%= link_to 'Create question', new_admin_test_question_path(@test) %>
+<%= link_to t('.create'), new_admin_test_question_path(@test) %>
+<%= link_to t('general.back'), admin_tests_path %>
 <table>
   <%= render partial: 'questions/question', collection: @test.questions %>
 </table>
-
-<%= link_to 'Edit', edit_admin_test_path(@test) %> |
-<%= link_to 'Back', admin_tests_path %>
-
