--- a/app/views/test_passings/show.html.erb
+++ b/app/views/test_passings/show.html.erb
@@ -1,4 +1,4 @@
-<h1>Pass the <%= @test_passing.test.title %>Test</h1>
+<h1><%= t('.in_progress_header', title: @test_passing.test.title) %></h1>
 
 <b>
   <%= @test_passing.current_question.body %>
@@ -19,5 +19,5 @@
     </p>
   <% end %>
 
-  <p><%= form.submit 'Next' %></p>
+  <p><%= form.submit t('.next') %></p>
 <% end %>
