--- a/app/views/tests/index.html.erb
+++ b/app/views/tests/index.html.erb
@@ -1,10 +1,9 @@
-<h1>list of tests</h1>
+<h1><%= t('.test_list_header') %>></h1>
 
 <table>
   <tr>
-    <th>Title</th>
-    <th>Number of questions</th>
-    <th>Actions</th>
+    <th><%= t('.title') %></th>
+    <th><%= t('.question_count')%></th>
   </tr>
   <%= render @tests %>
 </table>
