--- a/app/views/tests/index.html.erb
+++ b/app/views/tests/index.html.erb
@@ -1,3 +1,4 @@
+<h1><%= t('.test_list_header') %></h1>
 <div class="row">
   <div class="col-md-7">
     <table class="table table-borderless table-hover align-middle ms-5">
