--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,8 +11,11 @@
 </head>
 
 <body>
-<%= render 'shared/navbar' %>
-<%= yield %>
+  <%= render 'shared/navbar' %>
+  <div class="container">
+    <%= render 'shared/flash' %>
+    <%= yield %>
+  </div>
 </body>
-<%= render 'shared/footer' %>
+  <%= render 'shared/footer' %>
 </html>
