--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,4 +1,5 @@
-<nav class="navbar navbar-light bg-light p-2"><%= link_to 'TestGuru', root_path, class: 'navbar-brand' %>
+<nav class="navbar navbar-light bg-light p-2">
+  <h1><%= link_to 'TestGuru', root_path, class: 'navbar-brand' %></h1>
   <div>
     <% if user_signed_in? %>
       <p><%= t('general.welcome', first_name: current_user.first_name) %> |
