--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -4,6 +4,7 @@
     <% if user_signed_in? %>
       <p><%= t('general.welcome', first_name: current_user.first_name) %> |
         <% if current_user.is_a?(Admin) %>
+          <%= link_to t('general.gist_list'), admin_tests_path %> |
           <%= link_to t('general.management'), admin_tests_path %> |
         <% end %>
         <%= link_to t('general.logout'), destroy_user_session_path, data: { turbo_method: :delete } %>
