--- a/app/views/test_passings/show.html.erb
+++ b/app/views/test_passings/show.html.erb
@@ -1,8 +1,8 @@
 <h1><%= t('.in_progress_header', title: @test_passing.test.title) %></h1>
 
-<b>
-  <%= @test_passing.current_question.body %>
-</b>
+<p>
+  <b><%= @test_passing.current_question.body %></b>
+</p>
 
 <p>
   Question: <%= @test_passing.current_question_number %> / <%= @test_passing.test.questions.size %>
@@ -19,5 +19,6 @@
     </p>
   <% end %>
 
+  <p><%= link_to t('.gist_question'), gist_test_passing_path(@test_passing), method: :post %></p>
   <p><%= form.submit t('.next') %></p>
 <% end %>
