--- a/app/views/test_passings/show.html.erb
+++ b/app/views/test_passings/show.html.erb
@@ -1,12 +1,13 @@
 <h1><%= t('.in_progress_header', title: @test_passing.test.title) %></h1>
 
-<p>
-  <b><%= @test_passing.current_question.body %></b>
-</p>
+<p><%= @test_passing.current_question.body %></p>
 
-<p>
-  Question: <%= @test_passing.current_question_number %> / <%= @test_passing.test.questions.size %>
-</p>
+<div class="progress" role="progressbar" aria-valuemin="0" aria-valuemax="100">
+  <%= content_tag :div, nil, class: 'progress-bar overflow-visible bg-primary',
+                  data: { progress_percent: current_progress_percents } do %>
+    <%= t('.questions_progress', current: @test_passing.current_question_number, total: @test_passing.test.questions.size) %>
+  <% end %>
+</div>
 
 <%= render 'shared/errors', resource: @test_passing %>
 
