--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -8,6 +8,16 @@
     <%= f.email_field :email, autofocus: true, autocomplete: "email", class: 'form-control' %>
   </div>
 
+  <div class="mb-4">
+    <%= f.label :first_name, class: 'form-label' %><br/>
+    <%= f.text_field :first_name, autofocus: true, id: "first_name", class: 'form-control' %>
+  </div>
+
+  <div class="mb-4">
+    <%= f.label :last_name, class: 'form-label' %><br/>
+    <%= f.text_field :last_name, autofocus: true, id: "last_name", class: 'form-control' %>
+  </div>
+
   <div class="mb-3">
     <%= f.label :password, class: 'form-label' %>
     <% if @minimum_password_length %>
