--- a/app/views/admin/tests/show.html.erb
+++ b/app/views/admin/tests/show.html.erb
@@ -1,6 +1,6 @@
 <h1><%= @test.title %></h1>
+<table>
+  <%= render @test.questions %>
+</table>
 <%= link_to t('.create'), new_admin_test_question_path(@test) %>
 <%= link_to t('general.back'), admin_tests_path %>
-<table>
-  <%= render partial: 'questions/question', collection: @test.questions %>
-</table>
