--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,4 +1,4 @@
-<h2>Sign up</h2>
+<h2><%= t('general.signup') %></h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
@@ -34,7 +34,7 @@
   </div>
 
   <div class="mb-3">
-    <%= f.submit "Sign up", class: 'btn btn-primary btn-sm' %>
+    <%= f.submit t('general.signup'), class: 'btn btn-primary btn-sm' %>
   </div>
   <%  end  %>
 
