--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,15 +6,19 @@
   <%= csrf_meta_tags %>
   <%= csp_meta_tag %>
 
-  <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
-  <%= javascript_importmap_tags %>
+  <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+  <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
 </head>
 
 <body>
   <%= render 'shared/navbar' %>
   <div class="container">
-    <%= render 'shared/flash' %>
-    <%= yield %>
+    <div class="row justify-content-center">
+      <div class="col col-md-8">
+        <%= render 'shared/flash' %>
+        <%= yield %>
+      </div>
+    </div>
   </div>
 </body>
   <%= render 'shared/footer' %>
