--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -7,7 +7,7 @@
           <%= link_to t('general.gist_list'), admin_tests_path %> |
           <%= link_to t('general.management'), admin_tests_path %> |
         <% end %>
-        <%= link_to t('general.logout'), destroy_user_session_path, data: { turbo_method: :delete } %>
+        <%= link_to t('general.logout'), destroy_user_session_path, method: :delete %>
       </p>
     <% else %>
       <%= link_to t('general.login'), new_user_session_path %>
