--- a/app/views/test_passings/show.html.erb
+++ b/app/views/test_passings/show.html.erb
@@ -11,15 +11,14 @@
   <% end %>
 </div>
 
-<%= form_with url: test_passing_path(@test_passing), local: true, data: { turbo: false }, method: :put do |form| %>
+<%= form_with url: test_passing_path(@test_passing), local: true, method: :put, html: { id: 'attempt' } do |form| %>
   <%= form.collection_check_boxes :answer_ids, @test_passing.current_question.answers, :id, :body do |b| %>
-
     <p>
       <%= b.check_box id: "answer_ids_#{b.object.id}" %>
       <%= b.label %>
     </p>
   <% end %>
 
-  <p><%= link_to t('.gist_question'), gist_test_passing_path(@test_passing), method: :post %></p>
+  <p><%= link_to t('.gist_question'), gists_path(test_passing_id: @test_passing.id), method: :post %></p>
   <p><%= form.submit t('.next') %></p>
 <% end %>
