--- a/app/views/admin/gists/_gist.html.erb
+++ b/app/views/admin/gists/_gist.html.erb
@@ -1,9 +1,9 @@
 <tr>
   <td>
-    <%= link_to truncate(gist.question.body, length: 25), admin_question_path(gist.question) %>
+    <%= link_to truncate(gist.question.body), admin_question_path(gist.question) %>
   </td>
   <td>
-    <%= link_to 'Gist URL', gist.github_url %>
+    <%= link_to t("admin.gists.index.url"), gist.github_url %>
   </td>
   <td><%= gist.author_email %></td>
 </tr>
