--- a/app/views/devise/mailer/confirmation_instructions.html.erb
+++ b/app/views/devise/mailer/confirmation_instructions.html.erb
@@ -1,5 +1,6 @@
-<p>Welcome <%= @email %>!</p>
+<h1><%= t("hello") %></h1>
+<p><%= @email %>!</p>
 
-<p>You can confirm your account email through the link below:</p>
+<p><%= t("devise.mailer.confirmation_instructions.body") %></p>
 
-<p><%= link_to 'Confirm my account', confirmation_url(@resource, confirmation_token: @token) %></p>
+<p><%= link_to t("devise.mailer.confirmation_instructions.confirm"), confirmation_url(@resource, confirmation_token: @token) %></p>
