--- a/app/views/devise/mailer/email_changed.html.erb
+++ b/app/views/devise/mailer/email_changed.html.erb
@@ -1,7 +1,8 @@
-<p>Hello <%= @email %>!</p>
+<h1><%= t("hello") %></h1>
+<p><%= @email %>!</p>
 
 <% if @resource.try(:unconfirmed_email?) %>
-  <p>We're contacting you to notify you that your email is being changed to <%= @resource.unconfirmed_email %>.</p>
+  <p><%= t("devise.mailer.email_changed.body") %><%= @resource.unconfirmed_email %>.</p>
 <% else %>
-  <p>We're contacting you to notify you that your email has been changed to <%= @resource.email %>.</p>
+  <p><%= t("devise.mailer.email_changed.body_else") %><%= @resource.email %>.</p>
 <% end %>
