--- a/app/views/devise/mailer/password_change.html.erb
+++ b/app/views/devise/mailer/password_change.html.erb
@@ -1,3 +1,4 @@
-<p>Hello <%= @resource.email %>!</p>
+<h1><%= t("hello") %></h1>
+<p><%= @resource.email %>!</p>
 
-<p>We're contacting you to notify you that your password has been changed.</p>
+<p><%= t("devise.mailer.password_change.body") %></p>
