--- a/app/views/devise/mailer/unlock_instructions.html.erb
+++ b/app/views/devise/mailer/unlock_instructions.html.erb
@@ -1,7 +1,8 @@
-<p>Hello <%= @resource.email %>!</p>
+<h1><%= t("hello") %></h1>
+<p><%= @resource.email %>!</p>
 
-<p>Your account has been locked due to an excessive number of unsuccessful sign in attempts.</p>
+<p><%= t("devise.mailer.unlock_instructions.body") %></p>
 
-<p>Click the link below to unlock your account:</p>
+<p><%= t("devise.mailer.unlock_instructions.url") %></p>
 
-<p><%= link_to 'Unlock my account', unlock_url(@resource, unlock_token: @token) %></p>
+<p><%= link_to t("devise.mailer.unlock_instructions.unlock"), unlock_url(@resource, unlock_token: @token) %></p>
