--- a/app/views/tests/index.html.erb
+++ b/app/views/tests/index.html.erb
@@ -2,23 +2,27 @@
 <div class="row">
   <div class="col-md-8">
     <table class="table table-borderless table-hover align-middle ms-5">
-      <tr>
-        <th class="pointer sortable">
-          <%= t('.title') %>
-          <div class="float-end">
-            <%= content_tag :i, nil, class: 'bi bi-arrow-up d-none sort-asc' %>
-            <%= content_tag :i, nil, class: 'bi bi-arrow-down d-none sort-desc' %>
-          </div>
-        </th>
-        <th class="pointer sortable">
-          <%= t('.question_count') %>
-          <div class="float-end">
-            <%= content_tag :i, nil, class: 'bi bi-arrow-up d-none sort-asc' %>
-            <%= content_tag :i, nil, class: 'bi bi-arrow-down d-none sort-desc' %>
-          </div>
-        </th>
-      </tr>
-      <%= render @tests %>
+      <thead>
+        <tr>
+          <th class="pointer sortable">
+            <%= t('.title') %>
+            <div class="float-end">
+              <%= content_tag :i, nil, class: 'bi bi-arrow-up d-none sort-asc' %>
+              <%= content_tag :i, nil, class: 'bi bi-arrow-down d-none sort-desc' %>
+            </div>
+          </th>
+          <th class="pointer sortable">
+            <%= t('.question_count') %>
+            <div class="float-end">
+              <%= content_tag :i, nil, class: 'bi bi-arrow-up d-none sort-asc' %>
+              <%= content_tag :i, nil, class: 'bi bi-arrow-down d-none sort-desc' %>
+            </div>
+          </th>
+        </tr>
+      </thead>
+      <tbody>
+        <%= render @tests %>
+      </tbody>
     </table>
   </div>
 </div>
