--- a/app/views/admin/gists/index.html.erb
+++ b/app/views/admin/gists/index.html.erb
@@ -1,5 +1,5 @@
 <h1><%= t('.gist_list_header') %></h1>
-<table>
+<table class="table table-borderless p-4">
   <tr>
     <th><%= t('.question') %></th>
     <th><%= t('.url') %></th>
