--- a/app/views/admin/tests/edit.html.erb
+++ b/app/views/admin/tests/edit.html.erb
@@ -1,3 +1,3 @@
-<h1>Edit <%= @test.title %> test</h1>
+<h1><%= t('admin.tests.test_form.edit_header', title: @test.title) %> </h1>
 <%= render 'form' %>
 <%= link_to t('general.back') %>
