--- a/app/views/admin/tests/index.html.erb
+++ b/app/views/admin/tests/index.html.erb
@@ -1,15 +1,18 @@
 <h1><%= t('tests.index.test_list_header') %></h1>
 
 <%= render 'shared/errors', resource: @test %>
-
-<table>
+<table class="table table-hover p-3">
   <tr>
     <th><%= t('tests.index.title') %></th>
     <th><%= t('tests.index.question_count') %></th>
-    <th colspan="4"><%= t('.actions') %></th>
+    <th><%= t('.time_limit') %></th>
+    <th colspan="3" class="text-center"><%= t('.actions') %></th>
   </tr>
   <%= render @tests %>
 </table>
-<p>
-  <%= link_to t('.create'), new_admin_test_path %>
-</p>
+<div>
+  <%= link_to  new_admin_test_path, class: 'btn btn-lg' do %>
+    <%= content_tag :i, nil, class: 'bi bi-plus-circle' %>
+    <%= t('.create') %>
+  <% end %>
+</div>
