--- a/app/views/admin/tests/index.html.erb
+++ b/app/views/admin/tests/index.html.erb
@@ -4,8 +4,8 @@
 <table class="table table-hover p-3">
   <tr>
     <th><%= t('tests.index.title') %></th>
+    <th><%= t('tests.index.level') %></th>
     <th><%= t('tests.index.question_count') %></th>
-    <th><%= t('.time_limit') %></th>
     <th colspan="3" class="text-center"><%= t('.actions') %></th>
   </tr>
   <%= render @tests %>
