--- a/app/views/admin/tests/_test.html.erb
+++ b/app/views/admin/tests/_test.html.erb
@@ -4,6 +4,7 @@
     <%= render 'form_inline', test: test == @test ? @test : test %>
   </td>
   <td><%= test.questions.count %></td>
+  <td><%= test.level %></td>
   <td><%= link_to t('admin.actions.show'), admin_test_path(test) %></td>
   <td><%= link_to t('admin.actions.edit'),
                   edit_admin_test_path(test),
