--- a/app/views/tests/index.html.erb
+++ b/app/views/tests/index.html.erb
@@ -22,6 +22,7 @@
         <%= content_tag :i, nil, class: 'arr-down d-none sort-desc' %>
       </div>
     </th>
+    <th class="text-center"><%= t('tests.index.timer') %></th>
   </tr>
   <%= render @tests %>
 </table>
