--- a/app/views/tests/_test.html.erb
+++ b/app/views/tests/_test.html.erb
@@ -1,6 +1,7 @@
 <tr>
-  <td><%= test.title %></td>
-  <td><%= test.questions.count %></td>
-  <td><%= test.level %></td>
+  <td class="text-center"><%= test.title %></td>
+  <td class="text-center"><%= test.questions.count %></td>
+  <td class="text-center"><%= test.level %></td>
+  <td class="text-center"><%= test.timer %></td>
   <td><%= button_to t('.start'), start_test_path(test), class: 'btn btn-success'%></td>
 </tr>
