--- a/app/views/admin/tests/index.html.erb
+++ b/app/views/admin/tests/index.html.erb
@@ -22,7 +22,7 @@
       <div class="float-end">
         <%= content_tag :i, nil, class: 'arr-up d-none sort-asc' %>
         <%= content_tag :i, nil, class: 'arr-down d-none sort-desc' %>
-      </div>3
+      </div>
     </th>
     <th class="text-center"><%= t('tests.index.timer') %></th>
     <th colspan="3" class="text-center"><%= t('.actions') %></th>
